--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@commitlint/cli": "^3.2.0",
     "autoprefixer": "^6.4.0",
-    "bootstrap-sass": "^3.3.7",
+    "backstopjs": "^3.0.0",
+    "chromy": "^0.5.5",
     "commitizen": "^2.9.6",
     "commitlint-config-cz": "^0.5.0",
     "connect-livereload": "~0.5.4",
